<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@color/background_material_dark"
    android:textColor="@color/abc_primary_text_material_dark">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:id="@+id/textView"
        android:fontFeatureSettings="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#3D6AB7"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="50"
        android:id="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/craft"
        android:contentDescription="@string/new_game" />

    <Button
        android:id="@+id/start_game"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/new_game"
        android:background="#3D6AB7"
        android:layout_gravity="center_horizontal"
        android:onClick="startGame"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/leaderboards"
        android:id="@+id/button2"
        android:background="#3D6AB7"
        android:layout_gravity="center_horizontal"
        android:onClick="leaderBoards"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/config_txt"
            android:id="@+id/button"
            android:layout_weight="5"
            android:background="#3D6AB7"
            android:onClick="setSettings"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/interr"
            android:background="#3D6AB7"
            android:id="@+id/button3"
            android:onClick="helpMe"/>

    </LinearLayout>

</LinearLayout>