<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@color/background_material_dark">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/config_txt"
        android:textSize="40sp"
        android:textColor="#AEEA00"
        android:id="@+id/textView5"
        android:layout_gravity="top"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/hard_mode"
            android:textColor="#AEEA00"
            android:id="@+id/diff_sett_text"
            android:layout_gravity="left"/>

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textOff="Facil"
            android:textOn="Dificil"
            android:id="@+id/diff_sett_switch"
            android:layout_gravity="right"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sound_mode"
            android:textColor="#AEEA00"
            android:id="@+id/sound_sett_text"
            android:layout_gravity="left"/>

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textOff="Facil"
            android:textOn="Dificil"
            android:id="@+id/sound_sett_switch"
            android:layout_gravity="right"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/vibra_mode"
            android:textColor="#AEEA00"
            android:id="@+id/vibra_conff_text"
            android:layout_gravity="left"/>

        <Switch
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/vibra_conff_switch"
            android:layout_gravity="right"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="2">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:text="@string/accept"
            android:background="#AEEA00"
            android:id="@+id/button4"
            android:layout_gravity="bottom"
            android:onClick="onAccept"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:background="#AEEA00"
            android:text="@string/cancel"
            android:id="@+id/button5"
            android:layout_gravity="bottom"
            android:onClick="onCancel"/>
    </LinearLayout>

</LinearLayout>